data/forge_javadoc/1.12.2/raw/net/minecraft/init/SoundEvents.md
---
title: "SoundEvents"
description: "public class SoundEvents extends java.lang.Object"
package: "net/minecraft/init"
version: "1.12.2"
forgeBuild: "14.23.5.2859"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.12.2-14.23.5.2859/net/minecraft/init/SoundEvents.html"
sourceType: javadoc
---

# SoundEvents

**Inheritance:** java.lang.Object → net.minecraft.init.SoundEvents

## Class signature

```java
public class SoundEvents extends java.lang.Object
```

## Constructors

- `SoundEvents()`

## Fields

- `static SoundEvent AMBIENT_CAVE`
- `static SoundEvent BLOCK_ANVIL_BREAK`
- `static SoundEvent BLOCK_ANVIL_DESTROY`
- `static SoundEvent BLOCK_ANVIL_FALL`
- `static SoundEvent BLOCK_ANVIL_HIT`
- `static SoundEvent BLOCK_ANVIL_LAND`
- `static SoundEvent BLOCK_ANVIL_PLACE`
- `static SoundEvent BLOCK_ANVIL_STEP`
- `static SoundEvent BLOCK_ANVIL_USE`
- `static SoundEvent BLOCK_BREWING_STAND_BREW`
- `static SoundEvent BLOCK_CHEST_CLOSE`
- `static SoundEvent BLOCK_CHEST_LOCKED`
- `static SoundEvent BLOCK_CHEST_OPEN`
- `static SoundEvent BLOCK_CHORUS_FLOWER_DEATH`
- `static SoundEvent BLOCK_CHORUS_FLOWER_GROW`
- `static SoundEvent BLOCK_CLOTH_BREAK`
- `static SoundEvent BLOCK_CLOTH_FALL`
- `static SoundEvent BLOCK_CLOTH_HIT`
- `static SoundEvent BLOCK_CLOTH_PLACE`
- `static SoundEvent BLOCK_CLOTH_STEP`
- `static SoundEvent BLOCK_COMPARATOR_CLICK`
- `static SoundEvent BLOCK_DISPENSER_DISPENSE`
- `static SoundEvent BLOCK_DISPENSER_FAIL`
- `static SoundEvent BLOCK_DISPENSER_LAUNCH`
- `static SoundEvent BLOCK_ENCHANTMENT_TABLE_USE`
- `static SoundEvent BLOCK_END_GATEWAY_SPAWN`
- `static SoundEvent BLOCK_END_PORTAL_FRAME_FILL`
- `static SoundEvent BLOCK_END_PORTAL_SPAWN`
- `static SoundEvent BLOCK_ENDERCHEST_CLOSE`
- `static SoundEvent BLOCK_ENDERCHEST_OPEN`
- `static SoundEvent BLOCK_FENCE_GATE_CLOSE`
- `static SoundEvent BLOCK_FENCE_GATE_OPEN`
- `static SoundEvent BLOCK_FIRE_AMBIENT`
- `static SoundEvent BLOCK_FIRE_EXTINGUISH`
- `static SoundEvent BLOCK_FURNACE_FIRE_CRACKLE`
- `static SoundEvent BLOCK_GLASS_BREAK`
- `static SoundEvent BLOCK_GLASS_FALL`
- `static SoundEvent BLOCK_GLASS_HIT`
- `static SoundEvent BLOCK_GLASS_PLACE`
- `static SoundEvent BLOCK_GLASS_STEP`
- `static SoundEvent BLOCK_GRASS_BREAK`
- `static SoundEvent BLOCK_GRASS_FALL`
- `static SoundEvent BLOCK_GRASS_HIT`
- `static SoundEvent BLOCK_GRASS_PLACE`
- `static SoundEvent BLOCK_GRASS_STEP`
- `static SoundEvent BLOCK_GRAVEL_BREAK`
- `static SoundEvent BLOCK_GRAVEL_FALL`
- `static SoundEvent BLOCK_GRAVEL_HIT`
- `static SoundEvent BLOCK_GRAVEL_PLACE`
- `static SoundEvent BLOCK_GRAVEL_STEP`
- `static SoundEvent BLOCK_IRON_DOOR_CLOSE`
- `static SoundEvent BLOCK_IRON_DOOR_OPEN`
- `static SoundEvent BLOCK_IRON_TRAPDOOR_CLOSE`
- `static SoundEvent BLOCK_IRON_TRAPDOOR_OPEN`
- `static SoundEvent BLOCK_LADDER_BREAK`
- `static SoundEvent BLOCK_LADDER_FALL`
- `static SoundEvent BLOCK_LADDER_HIT`
- `static SoundEvent BLOCK_LADDER_PLACE`
- `static SoundEvent BLOCK_LADDER_STEP`
- `static SoundEvent BLOCK_LAVA_AMBIENT`
- `static SoundEvent BLOCK_LAVA_EXTINGUISH`
- `static SoundEvent BLOCK_LAVA_POP`
- `static SoundEvent BLOCK_LEVER_CLICK`
- `static SoundEvent BLOCK_METAL_BREAK`
- `static SoundEvent BLOCK_METAL_FALL`
- `static SoundEvent BLOCK_METAL_HIT`
- `static SoundEvent BLOCK_METAL_PLACE`
- `static SoundEvent BLOCK_METAL_PRESSPLATE_CLICK_OFF`
- `static SoundEvent BLOCK_METAL_PRESSPLATE_CLICK_ON`
- `static SoundEvent BLOCK_METAL_STEP`
- `static SoundEvent BLOCK_NOTE_BASEDRUM`
- `static SoundEvent BLOCK_NOTE_BASS`
- `static SoundEvent BLOCK_NOTE_BELL`
- `static SoundEvent BLOCK_NOTE_CHIME`
- `static SoundEvent BLOCK_NOTE_FLUTE`
- `static SoundEvent BLOCK_NOTE_GUITAR`
- `static SoundEvent BLOCK_NOTE_HARP`
- `static SoundEvent BLOCK_NOTE_HAT`
- `static SoundEvent BLOCK_NOTE_PLING`
- `static SoundEvent BLOCK_NOTE_SNARE`
- `static SoundEvent BLOCK_NOTE_XYLOPHONE`
- `static SoundEvent BLOCK_PISTON_CONTRACT`
- `static SoundEvent BLOCK_PISTON_EXTEND`
- `static SoundEvent BLOCK_PORTAL_AMBIENT`
- `static SoundEvent BLOCK_PORTAL_TRAVEL`
- `static SoundEvent BLOCK_PORTAL_TRIGGER`
- `static SoundEvent BLOCK_REDSTONE_TORCH_BURNOUT`
- `static SoundEvent BLOCK_SAND_BREAK`
- `static SoundEvent BLOCK_SAND_FALL`
- `static SoundEvent BLOCK_SAND_HIT`
- `static SoundEvent BLOCK_SAND_PLACE`
- `static SoundEvent BLOCK_SAND_STEP`
- `static SoundEvent BLOCK_SHULKER_BOX_CLOSE`
- `static SoundEvent BLOCK_SHULKER_BOX_OPEN`
- `static SoundEvent BLOCK_SLIME_BREAK`
- `static SoundEvent BLOCK_SLIME_FALL`
- `static SoundEvent BLOCK_SLIME_HIT`
- `static SoundEvent BLOCK_SLIME_PLACE`
- `static SoundEvent BLOCK_SLIME_STEP`
- `static SoundEvent BLOCK_SNOW_BREAK`
- `static SoundEvent BLOCK_SNOW_FALL`
- `static SoundEvent BLOCK_SNOW_HIT`
- `static SoundEvent BLOCK_SNOW_PLACE`
- `static SoundEvent BLOCK_SNOW_STEP`
- `static SoundEvent BLOCK_STONE_BREAK`
- `static SoundEvent BLOCK_STONE_BUTTON_CLICK_OFF`
- `static SoundEvent BLOCK_STONE_BUTTON_CLICK_ON`
- `static SoundEvent BLOCK_STONE_FALL`
- `static SoundEvent BLOCK_STONE_HIT`
- `static SoundEvent BLOCK_STONE_PLACE`
- `static SoundEvent BLOCK_STONE_PRESSPLATE_CLICK_OFF`
- `static SoundEvent BLOCK_STONE_PRESSPLATE_CLICK_ON`
- `static SoundEvent BLOCK_STONE_STEP`
- `static SoundEvent BLOCK_TRIPWIRE_ATTACH`
- `static SoundEvent BLOCK_TRIPWIRE_CLICK_OFF`
- `static SoundEvent BLOCK_TRIPWIRE_CLICK_ON`
- `static SoundEvent BLOCK_TRIPWIRE_DETACH`
- `static SoundEvent BLOCK_WATER_AMBIENT`
- `static SoundEvent BLOCK_WATERLILY_PLACE`
- `static SoundEvent BLOCK_WOOD_BREAK`
- `static SoundEvent BLOCK_WOOD_BUTTON_CLICK_OFF`
- `static SoundEvent BLOCK_WOOD_BUTTON_CLICK_ON`
- `static SoundEvent BLOCK_WOOD_FALL`
- `static SoundEvent BLOCK_WOOD_HIT`
- `static SoundEvent BLOCK_WOOD_PLACE`
- `static SoundEvent BLOCK_WOOD_PRESSPLATE_CLICK_OFF`
- `static SoundEvent BLOCK_WOOD_PRESSPLATE_CLICK_ON`
- `static SoundEvent BLOCK_WOOD_STEP`
- `static SoundEvent BLOCK_WOODEN_DOOR_CLOSE`
- `static SoundEvent BLOCK_WOODEN_DOOR_OPEN`
- `static SoundEvent BLOCK_WOODEN_TRAPDOOR_CLOSE`
- `static SoundEvent BLOCK_WOODEN_TRAPDOOR_OPEN`
- `static SoundEvent E_PARROT_IM_BLAZE`
- `static SoundEvent E_PARROT_IM_CREEPER`
- `static SoundEvent E_PARROT_IM_ELDER_GUARDIAN`
- `static SoundEvent E_PARROT_IM_ENDERDRAGON`
- `static SoundEvent E_PARROT_IM_ENDERMAN`
- `static SoundEvent E_PARROT_IM_ENDERMITE`
- `static SoundEvent E_PARROT_IM_EVOCATION_ILLAGER`
- `static SoundEvent E_PARROT_IM_GHAST`
- `static SoundEvent E_PARROT_IM_HUSK`
- `static SoundEvent E_PARROT_IM_ILLUSION_ILLAGER`
- `static SoundEvent E_PARROT_IM_MAGMACUBE`
- `static SoundEvent E_PARROT_IM_POLAR_BEAR`
- `static SoundEvent E_PARROT_IM_SHULKER`
- `static SoundEvent E_PARROT_IM_SILVERFISH`
- `static SoundEvent E_PARROT_IM_SKELETON`
- `static SoundEvent E_PARROT_IM_SLIME`
- `static SoundEvent E_PARROT_IM_SPIDER`
- `static SoundEvent E_PARROT_IM_STRAY`
- `static SoundEvent E_PARROT_IM_VEX`
- `static SoundEvent E_PARROT_IM_VINDICATION_ILLAGER`
- `static SoundEvent E_PARROT_IM_WITCH`
- `static SoundEvent E_PARROT_IM_WITHER`
- `static SoundEvent E_PARROT_IM_WITHER_SKELETON`
- `static SoundEvent E_PARROT_IM_WOLF`
- `static SoundEvent E_PARROT_IM_ZOMBIE`
- `static SoundEvent E_PARROT_IM_ZOMBIE_PIGMAN`
- `static SoundEvent E_PARROT_IM_ZOMBIE_VILLAGER`
- `static SoundEvent ENCHANT_THORNS_HIT`
- `static SoundEvent ENTITY_ARMORSTAND_BREAK`
- `static SoundEvent ENTITY_ARMORSTAND_FALL`
- `static SoundEvent ENTITY_ARMORSTAND_HIT`
- `static SoundEvent ENTITY_ARMORSTAND_PLACE`
- `static SoundEvent ENTITY_ARROW_HIT`
- `static SoundEvent ENTITY_ARROW_HIT_PLAYER`
- `static SoundEvent ENTITY_ARROW_SHOOT`
- `static SoundEvent ENTITY_BAT_AMBIENT`
- `static SoundEvent ENTITY_BAT_DEATH`
- `static SoundEvent ENTITY_BAT_HURT`
- `static SoundEvent ENTITY_BAT_LOOP`
- `static SoundEvent ENTITY_BAT_TAKEOFF`
- `static SoundEvent ENTITY_BLAZE_AMBIENT`
- `static SoundEvent ENTITY_BLAZE_BURN`
- `static SoundEvent ENTITY_BLAZE_DEATH`
- `static SoundEvent ENTITY_BLAZE_HURT`
- `static SoundEvent ENTITY_BLAZE_SHOOT`
- `static SoundEvent ENTITY_BOAT_PADDLE_LAND`
- `static SoundEvent ENTITY_BOAT_PADDLE_WATER`
- `static SoundEvent ENTITY_BOBBER_RETRIEVE`
- `static SoundEvent ENTITY_BOBBER_SPLASH`
- `static SoundEvent ENTITY_BOBBER_THROW`
- `static SoundEvent ENTITY_CAT_AMBIENT`
- `static SoundEvent ENTITY_CAT_DEATH`
- `static SoundEvent ENTITY_CAT_HISS`
- `static SoundEvent ENTITY_CAT_HURT`
- `static SoundEvent ENTITY_CAT_PURR`
- `static SoundEvent ENTITY_CAT_PURREOW`
- `static SoundEvent ENTITY_CHICKEN_AMBIENT`
- `static SoundEvent ENTITY_CHICKEN_DEATH`
- `static SoundEvent ENTITY_CHICKEN_EGG`
- `static SoundEvent ENTITY_CHICKEN_HURT`
- `static SoundEvent ENTITY_CHICKEN_STEP`
- `static SoundEvent ENTITY_COW_AMBIENT`
- `static SoundEvent ENTITY_COW_DEATH`
- `static SoundEvent ENTITY_COW_HURT`
- `static SoundEvent ENTITY_COW_MILK`
- `static SoundEvent ENTITY_COW_STEP`
- `static SoundEvent ENTITY_CREEPER_DEATH`
- `static SoundEvent ENTITY_CREEPER_HURT`
- `static SoundEvent ENTITY_CREEPER_PRIMED`
- `static SoundEvent ENTITY_DONKEY_AMBIENT`
- `static SoundEvent ENTITY_DONKEY_ANGRY`
- `static SoundEvent ENTITY_DONKEY_CHEST`
- `static SoundEvent ENTITY_DONKEY_DEATH`
- `static SoundEvent ENTITY_DONKEY_HURT`
- `static SoundEvent ENTITY_EGG_THROW`
- `static SoundEvent ENTITY_ELDER_GUARDIAN_AMBIENT`
- `static SoundEvent ENTITY_ELDER_GUARDIAN_CURSE`
- `static SoundEvent ENTITY_ELDER_GUARDIAN_DEATH`
- `static SoundEvent ENTITY_ELDER_GUARDIAN_DEATH_LAND`
- `static SoundEvent ENTITY_ELDER_GUARDIAN_FLOP`
- `static SoundEvent ENTITY_ELDER_GUARDIAN_HURT`
- `static SoundEvent ENTITY_ELDER_GUARDIAN_HURT_LAND`
- `static SoundEvent ENTITY_ELDERGUARDIAN_AMBIENTLAND`
- `static SoundEvent ENTITY_ENDERDRAGON_AMBIENT`
- `static SoundEvent ENTITY_ENDERDRAGON_DEATH`
- `static SoundEvent ENTITY_ENDERDRAGON_FIREBALL_EPLD`
- `static SoundEvent ENTITY_ENDERDRAGON_FLAP`
- `static SoundEvent ENTITY_ENDERDRAGON_GROWL`
- `static SoundEvent ENTITY_ENDERDRAGON_HURT`
- `static SoundEvent ENTITY_ENDERDRAGON_SHOOT`
- `static SoundEvent ENTITY_ENDEREYE_DEATH`
- `static SoundEvent ENTITY_ENDEREYE_LAUNCH`
- `static SoundEvent ENTITY_ENDERMEN_AMBIENT`
- `static SoundEvent ENTITY_ENDERMEN_DEATH`
- `static SoundEvent ENTITY_ENDERMEN_HURT`
- `static SoundEvent ENTITY_ENDERMEN_SCREAM`
- `static SoundEvent ENTITY_ENDERMEN_STARE`
- `static SoundEvent ENTITY_ENDERMEN_TELEPORT`
- `static SoundEvent ENTITY_ENDERMITE_AMBIENT`
- `static SoundEvent ENTITY_ENDERMITE_DEATH`
- `static SoundEvent ENTITY_ENDERMITE_HURT`
- `static SoundEvent ENTITY_ENDERMITE_STEP`
- `static SoundEvent ENTITY_ENDERPEARL_THROW`
- `static SoundEvent ENTITY_EVOCATION_ILLAGER_AMBIENT`
- `static SoundEvent ENTITY_EVOCATION_ILLAGER_HURT`
- `static SoundEvent ENTITY_EXPERIENCE_BOTTLE_THROW`
- `static SoundEvent ENTITY_EXPERIENCE_ORB_PICKUP`
- `static SoundEvent ENTITY_FIREWORK_BLAST`
- `static SoundEvent ENTITY_FIREWORK_BLAST_FAR`
- `static SoundEvent ENTITY_FIREWORK_LARGE_BLAST`
- `static SoundEvent ENTITY_FIREWORK_LARGE_BLAST_FAR`
- `static SoundEvent ENTITY_FIREWORK_LAUNCH`
- `static SoundEvent ENTITY_FIREWORK_SHOOT`
- `static SoundEvent ENTITY_FIREWORK_TWINKLE`
- `static SoundEvent ENTITY_FIREWORK_TWINKLE_FAR`
- `static SoundEvent ENTITY_GENERIC_BIG_FALL`
- `static SoundEvent ENTITY_GENERIC_BURN`
- `static SoundEvent ENTITY_GENERIC_DEATH`
- `static SoundEvent ENTITY_GENERIC_DRINK`
- `static SoundEvent ENTITY_GENERIC_EAT`
- `static SoundEvent ENTITY_GENERIC_EXPLODE`
- `static SoundEvent ENTITY_GENERIC_EXTINGUISH_FIRE`
- `static SoundEvent ENTITY_GENERIC_HURT`
- `static SoundEvent ENTITY_GENERIC_SMALL_FALL`
- `static SoundEvent ENTITY_GENERIC_SPLASH`
- `static SoundEvent ENTITY_GENERIC_SWIM`
- `static SoundEvent ENTITY_GHAST_AMBIENT`
- `static SoundEvent ENTITY_GHAST_DEATH`
- `static SoundEvent ENTITY_GHAST_HURT`
- `static SoundEvent ENTITY_GHAST_SCREAM`
- `static SoundEvent ENTITY_GHAST_SHOOT`
- `static SoundEvent ENTITY_GHAST_WARN`
- `static SoundEvent ENTITY_GUARDIAN_AMBIENT`
- `static SoundEvent ENTITY_GUARDIAN_AMBIENT_LAND`
- `static SoundEvent ENTITY_GUARDIAN_ATTACK`
- `static SoundEvent ENTITY_GUARDIAN_DEATH`
- `static SoundEvent ENTITY_GUARDIAN_DEATH_LAND`
- `static SoundEvent ENTITY_GUARDIAN_FLOP`
- `static SoundEvent ENTITY_GUARDIAN_HURT`
- `static SoundEvent ENTITY_GUARDIAN_HURT_LAND`
- `static SoundEvent ENTITY_HORSE_AMBIENT`
- `static SoundEvent ENTITY_HORSE_ANGRY`
- `static SoundEvent ENTITY_HORSE_ARMOR`
- `static SoundEvent ENTITY_HORSE_BREATHE`
- `static SoundEvent ENTITY_HORSE_DEATH`
- `static SoundEvent ENTITY_HORSE_EAT`
- `static SoundEvent ENTITY_HORSE_GALLOP`
- `static SoundEvent ENTITY_HORSE_HURT`
- `static SoundEvent ENTITY_HORSE_JUMP`
- `static SoundEvent ENTITY_HORSE_LAND`
- `static SoundEvent ENTITY_HORSE_SADDLE`
- `static SoundEvent ENTITY_HORSE_STEP`
- `static SoundEvent ENTITY_HORSE_STEP_WOOD`
- `static SoundEvent ENTITY_HOSTILE_BIG_FALL`
- `static SoundEvent ENTITY_HOSTILE_DEATH`
- `static SoundEvent ENTITY_HOSTILE_HURT`
- `static SoundEvent ENTITY_HOSTILE_SMALL_FALL`
- `static SoundEvent ENTITY_HOSTILE_SPLASH`
- `static SoundEvent ENTITY_HOSTILE_SWIM`
- `static SoundEvent ENTITY_HUSK_AMBIENT`
- `static SoundEvent ENTITY_HUSK_DEATH`
- `static SoundEvent ENTITY_HUSK_HURT`
- `static SoundEvent ENTITY_HUSK_STEP`
- `static SoundEvent ENTITY_ILLAGER_CAST_SPELL`
- `static SoundEvent ENTITY_ILLAGER_DEATH`
- `static SoundEvent ENTITY_ILLAGER_MIRROR_MOVE`
- `static SoundEvent ENTITY_ILLAGER_PREPARE_BLINDNESS`
- `static SoundEvent ENTITY_ILLAGER_PREPARE_MIRROR`
- `static SoundEvent ENTITY_ILLUSION_ILLAGER_AMBIENT`
- `static SoundEvent ENTITY_ILLUSION_ILLAGER_HURT`
- `static SoundEvent ENTITY_IRONGOLEM_ATTACK`
- `static SoundEvent ENTITY_IRONGOLEM_DEATH`
- `static SoundEvent ENTITY_IRONGOLEM_HURT`
- `static SoundEvent ENTITY_IRONGOLEM_STEP`
- `static SoundEvent ENTITY_ITEM_BREAK`
- `static SoundEvent ENTITY_ITEM_PICKUP`
- `static SoundEvent ENTITY_ITEMFRAME_ADD_ITEM`
- `static SoundEvent ENTITY_ITEMFRAME_BREAK`
- `static SoundEvent ENTITY_ITEMFRAME_PLACE`
- `static SoundEvent ENTITY_ITEMFRAME_REMOVE_ITEM`
- `static SoundEvent ENTITY_ITEMFRAME_ROTATE_ITEM`
- `static SoundEvent ENTITY_LEASHKNOT_BREAK`
- `static SoundEvent ENTITY_LEASHKNOT_PLACE`
- `static SoundEvent ENTITY_LIGHTNING_IMPACT`
- `static SoundEvent ENTITY_LIGHTNING_THUNDER`
- `static SoundEvent ENTITY_LINGERINGPOTION_THROW`
- `static SoundEvent ENTITY_LLAMA_AMBIENT`
- `static SoundEvent ENTITY_LLAMA_ANGRY`
- `static SoundEvent ENTITY_LLAMA_CHEST`
- `static SoundEvent ENTITY_LLAMA_DEATH`
- `static SoundEvent ENTITY_LLAMA_EAT`
- `static SoundEvent ENTITY_LLAMA_HURT`
- `static SoundEvent ENTITY_LLAMA_SPIT`
- `static SoundEvent ENTITY_LLAMA_STEP`
- `static SoundEvent ENTITY_LLAMA_SWAG`
- `static SoundEvent ENTITY_MAGMACUBE_DEATH`
- `static SoundEvent ENTITY_MAGMACUBE_HURT`
- `static SoundEvent ENTITY_MAGMACUBE_JUMP`
- `static SoundEvent ENTITY_MAGMACUBE_SQUISH`
- `static SoundEvent ENTITY_MINECART_INSIDE`
- `static SoundEvent ENTITY_MINECART_RIDING`
- `static SoundEvent ENTITY_MOOSHROOM_SHEAR`
- `static SoundEvent ENTITY_MULE_AMBIENT`
- `static SoundEvent ENTITY_MULE_CHEST`
- `static SoundEvent ENTITY_MULE_DEATH`
- `static SoundEvent ENTITY_MULE_HURT`
- `static SoundEvent ENTITY_PAINTING_BREAK`
- `static SoundEvent ENTITY_PAINTING_PLACE`
- `static SoundEvent ENTITY_PARROT_AMBIENT`
- `static SoundEvent ENTITY_PARROT_DEATH`
- `static SoundEvent ENTITY_PARROT_EAT`
- `static SoundEvent ENTITY_PARROT_FLY`
- `static SoundEvent ENTITY_PARROT_HURT`
- `static SoundEvent ENTITY_PARROT_STEP`
- `static SoundEvent ENTITY_PIG_AMBIENT`
- `static SoundEvent ENTITY_PIG_DEATH`
- `static SoundEvent ENTITY_PIG_HURT`
- `static SoundEvent ENTITY_PIG_SADDLE`
- `static SoundEvent ENTITY_PIG_STEP`
- `static SoundEvent ENTITY_PLAYER_ATTACK_CRIT`
- `static SoundEvent ENTITY_PLAYER_ATTACK_KNOCKBACK`
- `static SoundEvent ENTITY_PLAYER_ATTACK_NODAMAGE`
- `static SoundEvent ENTITY_PLAYER_ATTACK_STRONG`
- `static SoundEvent ENTITY_PLAYER_ATTACK_SWEEP`
- `static SoundEvent ENTITY_PLAYER_ATTACK_WEAK`
- `static SoundEvent ENTITY_PLAYER_BIG_FALL`
- `static SoundEvent ENTITY_PLAYER_BREATH`
- `static SoundEvent ENTITY_PLAYER_BURP`
- `static SoundEvent ENTITY_PLAYER_DEATH`
- `static SoundEvent ENTITY_PLAYER_HURT`
- `static SoundEvent ENTITY_PLAYER_HURT_DROWN`
- `static SoundEvent ENTITY_PLAYER_HURT_ON_FIRE`
- `static SoundEvent ENTITY_PLAYER_LEVELUP`
- `static SoundEvent ENTITY_PLAYER_SMALL_FALL`
- `static SoundEvent ENTITY_PLAYER_SPLASH`
- `static SoundEvent ENTITY_PLAYER_SWIM`
- `static SoundEvent ENTITY_POLAR_BEAR_AMBIENT`
- `static SoundEvent ENTITY_POLAR_BEAR_BABY_AMBIENT`
- `static SoundEvent ENTITY_POLAR_BEAR_DEATH`
- `static SoundEvent ENTITY_POLAR_BEAR_HURT`
- `static SoundEvent ENTITY_POLAR_BEAR_STEP`
- `static SoundEvent ENTITY_POLAR_BEAR_WARNING`
- `static SoundEvent ENTITY_RABBIT_AMBIENT`
- `static SoundEvent ENTITY_RABBIT_ATTACK`
- `static SoundEvent ENTITY_RABBIT_DEATH`
- `static SoundEvent ENTITY_RABBIT_HURT`
- `static SoundEvent ENTITY_RABBIT_JUMP`
- `static SoundEvent ENTITY_SHEEP_AMBIENT`
- `static SoundEvent ENTITY_SHEEP_DEATH`
- `static SoundEvent ENTITY_SHEEP_HURT`
- `static SoundEvent ENTITY_SHEEP_SHEAR`
- `static SoundEvent ENTITY_SHEEP_STEP`
- `static SoundEvent ENTITY_SHULKER_AMBIENT`
- `static SoundEvent ENTITY_SHULKER_BULLET_HIT`
- `static SoundEvent ENTITY_SHULKER_BULLET_HURT`
- `static SoundEvent ENTITY_SHULKER_CLOSE`
- `static SoundEvent ENTITY_SHULKER_DEATH`
- `static SoundEvent ENTITY_SHULKER_HURT`
- `static SoundEvent ENTITY_SHULKER_HURT_CLOSED`
- `static SoundEvent ENTITY_SHULKER_OPEN`
- `static SoundEvent ENTITY_SHULKER_SHOOT`
- `static SoundEvent ENTITY_SHULKER_TELEPORT`
- `static SoundEvent ENTITY_SILVERFISH_AMBIENT`
- `static SoundEvent ENTITY_SILVERFISH_DEATH`
- `static SoundEvent ENTITY_SILVERFISH_HURT`
- `static SoundEvent ENTITY_SILVERFISH_STEP`
- `static SoundEvent ENTITY_SKELETON_AMBIENT`
- `static SoundEvent ENTITY_SKELETON_DEATH`
- `static SoundEvent ENTITY_SKELETON_HORSE_AMBIENT`
- `static SoundEvent ENTITY_SKELETON_HORSE_DEATH`
- `static SoundEvent ENTITY_SKELETON_HORSE_HURT`
- `static SoundEvent ENTITY_SKELETON_HURT`
- `static SoundEvent ENTITY_SKELETON_SHOOT`
- `static SoundEvent ENTITY_SKELETON_STEP`
- `static SoundEvent ENTITY_SLIME_ATTACK`
- `static SoundEvent ENTITY_SLIME_DEATH`
- `static SoundEvent ENTITY_SLIME_HURT`
- `static SoundEvent ENTITY_SLIME_JUMP`
- `static SoundEvent ENTITY_SLIME_SQUISH`
- `static SoundEvent ENTITY_SMALL_MAGMACUBE_DEATH`
- `static SoundEvent ENTITY_SMALL_MAGMACUBE_HURT`
- `static SoundEvent ENTITY_SMALL_MAGMACUBE_SQUISH`
- `static SoundEvent ENTITY_SMALL_SLIME_DEATH`
- `static SoundEvent ENTITY_SMALL_SLIME_HURT`
- `static SoundEvent ENTITY_SMALL_SLIME_JUMP`
- `static SoundEvent ENTITY_SMALL_SLIME_SQUISH`
- `static SoundEvent ENTITY_SNOWBALL_THROW`
- `static SoundEvent ENTITY_SNOWMAN_AMBIENT`
- `static SoundEvent ENTITY_SNOWMAN_DEATH`
- `static SoundEvent ENTITY_SNOWMAN_HURT`
- `static SoundEvent ENTITY_SNOWMAN_SHOOT`
- `static SoundEvent ENTITY_SPIDER_AMBIENT`
- `static SoundEvent ENTITY_SPIDER_DEATH`
- `static SoundEvent ENTITY_SPIDER_HURT`
- `static SoundEvent ENTITY_SPIDER_STEP`
- `static SoundEvent ENTITY_SPLASH_POTION_BREAK`
- `static SoundEvent ENTITY_SPLASH_POTION_THROW`
- `static SoundEvent ENTITY_SQUID_AMBIENT`
- `static SoundEvent ENTITY_SQUID_DEATH`
- `static SoundEvent ENTITY_SQUID_HURT`
- `static SoundEvent ENTITY_STRAY_AMBIENT`
- `static SoundEvent ENTITY_STRAY_DEATH`
- `static SoundEvent ENTITY_STRAY_HURT`
- `static SoundEvent ENTITY_STRAY_STEP`
- `static SoundEvent ENTITY_TNT_PRIMED`
- `static SoundEvent ENTITY_VEX_AMBIENT`
- `static SoundEvent ENTITY_VEX_CHARGE`
- `static SoundEvent ENTITY_VEX_DEATH`
- `static SoundEvent ENTITY_VEX_HURT`
- `static SoundEvent ENTITY_VILLAGER_AMBIENT`
- `static SoundEvent ENTITY_VILLAGER_DEATH`
- `static SoundEvent ENTITY_VILLAGER_HURT`
- `static SoundEvent ENTITY_VILLAGER_NO`
- `static SoundEvent ENTITY_VILLAGER_TRADING`
- `static SoundEvent ENTITY_VILLAGER_YES`
- `static SoundEvent ENTITY_VINDICATION_ILLAGER_HURT`
- `static SoundEvent ENTITY_WITCH_AMBIENT`
- `static SoundEvent ENTITY_WITCH_DEATH`
- `static SoundEvent ENTITY_WITCH_DRINK`
- `static SoundEvent ENTITY_WITCH_HURT`
- `static SoundEvent ENTITY_WITCH_THROW`
- `static SoundEvent ENTITY_WITHER_AMBIENT`
- `static SoundEvent ENTITY_WITHER_BREAK_BLOCK`
- `static SoundEvent ENTITY_WITHER_DEATH`
- `static SoundEvent ENTITY_WITHER_HURT`
- `static SoundEvent ENTITY_WITHER_SHOOT`
- `static SoundEvent ENTITY_WITHER_SKELETON_AMBIENT`
- `static SoundEvent ENTITY_WITHER_SKELETON_DEATH`
- `static SoundEvent ENTITY_WITHER_SKELETON_HURT`
- `static SoundEvent ENTITY_WITHER_SKELETON_STEP`
- `static SoundEvent ENTITY_WITHER_SPAWN`
- `static SoundEvent ENTITY_WOLF_AMBIENT`
- `static SoundEvent ENTITY_WOLF_DEATH`
- `static SoundEvent ENTITY_WOLF_GROWL`
- `static SoundEvent ENTITY_WOLF_HOWL`
- `static SoundEvent ENTITY_WOLF_HURT`
- `static SoundEvent ENTITY_WOLF_PANT`
- `static SoundEvent ENTITY_WOLF_SHAKE`
- `static SoundEvent ENTITY_WOLF_STEP`
- `static SoundEvent ENTITY_WOLF_WHINE`
- `static SoundEvent ENTITY_ZOMBIE_AMBIENT`
- `static SoundEvent ENTITY_ZOMBIE_ATTACK_DOOR_WOOD`
- `static SoundEvent ENTITY_ZOMBIE_ATTACK_IRON_DOOR`
- `static SoundEvent ENTITY_ZOMBIE_BREAK_DOOR_WOOD`
- `static SoundEvent ENTITY_ZOMBIE_DEATH`
- `static SoundEvent ENTITY_ZOMBIE_HORSE_AMBIENT`
- `static SoundEvent ENTITY_ZOMBIE_HORSE_DEATH`
- `static SoundEvent ENTITY_ZOMBIE_HORSE_HURT`
- `static SoundEvent ENTITY_ZOMBIE_HURT`
- `static SoundEvent ENTITY_ZOMBIE_INFECT`
- `static SoundEvent ENTITY_ZOMBIE_PIG_AMBIENT`
- `static SoundEvent ENTITY_ZOMBIE_PIG_ANGRY`
- `static SoundEvent ENTITY_ZOMBIE_PIG_DEATH`
- `static SoundEvent ENTITY_ZOMBIE_PIG_HURT`
- `static SoundEvent ENTITY_ZOMBIE_STEP`
- `static SoundEvent ENTITY_ZOMBIE_VILLAGER_AMBIENT`
- `static SoundEvent ENTITY_ZOMBIE_VILLAGER_CONVERTED`
- `static SoundEvent ENTITY_ZOMBIE_VILLAGER_CURE`
- `static SoundEvent ENTITY_ZOMBIE_VILLAGER_DEATH`
- `static SoundEvent ENTITY_ZOMBIE_VILLAGER_HURT`
- `static SoundEvent ENTITY_ZOMBIE_VILLAGER_STEP`
- `static SoundEvent EVOCATION_FANGS_ATTACK`
- `static SoundEvent EVOCATION_ILLAGER_CAST_SPELL`
- `static SoundEvent EVOCATION_ILLAGER_DEATH`
- `static SoundEvent EVOCATION_ILLAGER_PREPARE_ATTACK`
- `static SoundEvent EVOCATION_ILLAGER_PREPARE_SUMMON`
- `static SoundEvent EVOCATION_ILLAGER_PREPARE_WOLOLO`
- `static SoundEvent ITEM_ARMOR_EQIIP_ELYTRA`
- `static SoundEvent ITEM_ARMOR_EQUIP_CHAIN`
- `static SoundEvent ITEM_ARMOR_EQUIP_DIAMOND`
- `static SoundEvent ITEM_ARMOR_EQUIP_GENERIC`
- `static SoundEvent ITEM_ARMOR_EQUIP_GOLD`
- `static SoundEvent ITEM_ARMOR_EQUIP_IRON`
- `static SoundEvent ITEM_ARMOR_EQUIP_LEATHER`
- `static SoundEvent ITEM_BOTTLE_EMPTY`
- `static SoundEvent ITEM_BOTTLE_FILL`
- `static SoundEvent ITEM_BOTTLE_FILL_DRAGONBREATH`
- `static SoundEvent ITEM_BUCKET_EMPTY`
- `static SoundEvent ITEM_BUCKET_EMPTY_LAVA`
- `static SoundEvent ITEM_BUCKET_FILL`
- `static SoundEvent ITEM_BUCKET_FILL_LAVA`
- `static SoundEvent ITEM_CHORUS_FRUIT_TELEPORT`
- `static SoundEvent ITEM_ELYTRA_FLYING`
- `static SoundEvent ITEM_FIRECHARGE_USE`
- `static SoundEvent ITEM_FLINTANDSTEEL_USE`
- `static SoundEvent ITEM_HOE_TILL`
- `static SoundEvent ITEM_SHIELD_BLOCK`
- `static SoundEvent ITEM_SHIELD_BREAK`
- `static SoundEvent ITEM_SHOVEL_FLATTEN`
- `static SoundEvent ITEM_TOTEM_USE`
- `static SoundEvent MUSIC_CREATIVE`
- `static SoundEvent MUSIC_CREDITS`
- `static SoundEvent MUSIC_DRAGON`
- `static SoundEvent MUSIC_END`
- `static SoundEvent MUSIC_GAME`
- `static SoundEvent MUSIC_MENU`
- `static SoundEvent MUSIC_NETHER`
- `static SoundEvent RECORD_11`
- `static SoundEvent RECORD_13`
- `static SoundEvent RECORD_BLOCKS`
- `static SoundEvent RECORD_CAT`
- `static SoundEvent RECORD_CHIRP`
- `static SoundEvent RECORD_FAR`
- `static SoundEvent RECORD_MALL`
- `static SoundEvent RECORD_MELLOHI`
- `static SoundEvent RECORD_STAL`
- `static SoundEvent RECORD_STRAD`
- `static SoundEvent RECORD_WAIT`
- `static SoundEvent RECORD_WARD`
- `static SoundEvent UI_BUTTON_CLICK`
- `static SoundEvent UI_TOAST_CHALLENGE_COMPLETE`
- `static SoundEvent UI_TOAST_IN`
- `static SoundEvent UI_TOAST_OUT`
- `static SoundEvent VINDICATION_ILLAGER_AMBIENT`
- `static SoundEvent VINDICATION_ILLAGER_DEATH`
- `static SoundEvent WEATHER_RAIN`
- `static SoundEvent WEATHER_RAIN_ABOVE`
